Initialize TaskScheduler in views examples.

A TaskScheduler is required for
ui::X11HotplugEventHandler::OnHotplugEvent().

Bug: 735971
Change-Id: I05979686cdcf2f5b3fe59f6cd2929f69e9c9c62a