ui/views/examples/examples_main.cc
@@ -14,6 +14,7 @@
 #include "base/power_monitor/power_monitor.h"
 #include "base/power_monitor/power_monitor_device_source.h"
 #include "base/run_loop.h"
+#include "base/task_scheduler/task_scheduler.h"
 #include "base/test/test_discardable_memory_allocator.h"
 #include "build/build_config.h"
 #include "components/viz/host/frame_sink_manager_host.h"
@@ -74,6 +75,7 @@ int main(int argc, char** argv) {
   context_factory->set_use_test_surface(false);
 
   base::MessageLoopForUI message_loop;
+  base::TaskScheduler::CreateAndStartWithDefaultParams("ViewsExamples");
 
   base::i18n::InitializeICU();
 
@@ -124,6 +126,8 @@ int main(int argc, char** argv) {
 #if defined(USE_AURA)
   env.reset();
 #endif
+
+  base::TaskScheduler::GetInstance()->Shutdown();
 
   return 0;
 }
